<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/foodfast_background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:layout_marginBottom="-4dp"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/agbalumo_regular_style"
                android:text="@string/recetas"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_brand_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button1"
                android:layout_width="335dp"
                android:layout_height="51dp"
                android:layout_marginTop="32dp"

                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/salm_n_al_horno"

                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="335dp"
                android:layout_height="51dp"
                android:layout_marginTop="16dp"

                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/pasta_integral"

                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="335dp"
                android:layout_height="51dp"
                android:layout_marginTop="15dp"

                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/ensalada_de_pollo"

                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/button4"
                android:layout_width="335dp"
                android:layout_height="51dp"
                android:layout_marginTop="16dp"

                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/omelette_de_espinacas"

                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3" />

            <Button
                android:id="@+id/button5"
                android:layout_width="335dp"
                android:layout_height="51dp"

                android:layout_marginTop="17dp"
                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:paddingEnd="15dp"
                android:text="@string/avena"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button4" />

            <Button
                android:id="@+id/button6"
                android:layout_width="335dp"
                android:layout_height="51dp"

                android:layout_marginTop="16dp"
                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:paddingEnd="15dp"
                android:text="@string/quinoa_con_verduras"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <Button
                android:id="@+id/button7"
                android:layout_width="335dp"
                android:layout_height="51dp"

                android:layout_marginTop="16dp"
                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:paddingEnd="15dp"
                android:text="@string/pupusas"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button6" />

            <Button
                android:id="@+id/button8"
                android:layout_width="335dp"
                android:layout_height="51dp"

                android:layout_marginTop="16dp"
                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:paddingEnd="15dp"
                android:text="@string/sopa_de_res"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button10" />

            <Button
                android:id="@+id/button9"
                android:layout_width="335dp"
                android:layout_height="51dp"

                android:layout_marginTop="16dp"
                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"

                android:text="@string/enchiladas"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button8" />

            <Button
                android:id="@+id/button10"
                android:layout_width="335dp"
                android:layout_height="51dp"

                android:layout_marginTop="16dp"
                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:paddingEnd="15dp"
                android:text="@string/tamales"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button11" />

            <Button
                android:id="@+id/button11"
                android:layout_width="335dp"
                android:layout_height="51dp"

                android:layout_marginTop="15dp"
                android:background="@drawable/foodfast_button_primary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="15dp"

                android:paddingEnd="15dp"
                android:text="@string/panes_con_pollo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:theme="@style/Theme.Material3.DayNight.NoActionBar"
        app:itemBackground="@color/foodfast_nav_background"
        app:itemIconTint="@color/foodfast_nav_selected"
        app:itemTextColor="@color/foodfast_nav_selected"
        app:menu="@menu/menu_navigation" />

</RelativeLayout>