<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_screen"
    tools:context=".RegistrarseActivity1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:paddingBottom="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/agbalumo_regular_style"
                android:text="FoodFast"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_brand_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/cabin_semibold_style"
                android:text="@string/registrarse2"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_huge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:fontFamily="@font/cabin_semibold_style"
                android:text="@string/nombre_de_usuario2"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@drawable/foodfast_edit_text"
        android:fontFamily="@font/cabin_regular"
        android:padding="10dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:inputType="textPassword"
        android:textColor="@color/text_blue"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/foodfast_edit_text"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:fontFamily="@font/cabin_semibold_style"
                android:text="@string/contrase_a2"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:background="@drawable/foodfast_edit_text"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:inputType="textPassword"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/cabin_semibold_style"
                android:text="@string/se_recomienda_una_contrase_a_segura_y_f_cil_de_recordar"
                android:textAlignment="center"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/foodfast_button_primary"

                android:fontFamily="@font/cabin_bold"
                android:padding="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/registrarse3"
                android:textAlignment="center"

                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/cabin_semibold_style"
                android:text="@string/ya_tienes_una_cuenta"
                android:textColor="@color/text_blue"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button2" />

            <Button
                android:id="@+id/button3"
                android:layout_width="300dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="12dp"
                android:background="@drawable/foodfast_button_secondary"
                android:fontFamily="@font/cabin_regular"
                android:padding="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"

                android:text="@string/iniciar_sesi_n4"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>